--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages          # GitHub Pages branch
-        folder: dist/wallet_app  # Angular build output folder
+        folder: dist/wallet  # Angular build output folder
